--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <div class="container">
       <div class="board" id="board"></div>
       <div>Flags left: <span id="flags-left"></span></div>
+      <div class="result"></div>
+      <button class="reset">Reset</button>
     </div>
   </body>
 </html>
