--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="board" id="board"></div>
+      <h1>Minesweeper</h1>
+      <div>Time: <span id="time"></span></div>
       <div>Flags left: <span id="flags-left"></span></div>
+      <div class="board" id="board"></div>
       <div class="result"></div>
-      <button class="reset">Reset</button>
+      <button class="reset">Reset board</button>
     </div>
   </body>
 </html>
